# notes

./: .gitignore  Agents.md  Cargo.toml  E2E-TEST-PLAN.md  LICENSE  P2P-E2E-TEST-MATRIX.md  RESEARCH-version-history-innovations.md  index.html  macOS icon.af  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.github/: build-and-sign.sh
.github/workflows/: ci.yml  release.yml
crates/notes-core/: Cargo.toml
crates/notes-core/src/: blame.rs  doc_store.rs  editor_doc.rs  editor_migration.rs  editor_schema.rs  editor_text.rs  error.rs  history.rs  history_store.rs  invite_state.rs  lib.rs  manifest.rs  persistence.rs  project.rs  search.rs  seen_state.rs  settings.rs  types.rs  validation.rs  version.rs  version_store.rs
crates/notes-crypto/: Cargo.toml
crates/notes-crypto/src/: encryption.rs  epochs.rs  error.rs  key_wrapping.rs  keystore.rs  lib.rs  signing.rs
crates/notes-sync/: Cargo.toml
crates/notes-sync/src/: blobs.rs  events.rs  invite.rs  lib.rs  peer_manager.rs  presence.rs  protocol.rs  sync_engine.rs  sync_session.rs  sync_state_store.rs
deploy/relay/: README.md  docker-compose.yml
packaging/aur/notes-bin/: .SRCINFO  PKGBUILD  README.md  update-release-metadata.sh
scripts/: run-p2p-e2e.mjs
src/: app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: invite_accept.rs  lib.rs  main.rs
src-tauri/tests/: accept_invite.rs
src/lib/actions/: sortable.ts
src/lib/api/: tauri.ts
src/lib/components/: App.svelte  App.test.ts  DragRegion.svelte  StatusBar.svelte  TitleBar.svelte  UpdateBanner.svelte
src/lib/components/__test_mocks__/: MockChangeMinibar.svelte  StubProjectOverview.svelte  StubSidebarChild.svelte
src/lib/components/dialogs/: JoinDialog.svelte  JoinDialog.test.ts  ShareDialog.svelte  ShareDialog.test.ts
src/lib/components/editor/: BlameGutter.svelte  ChangeMinibar.svelte  ChangeMinibar.test.ts  EditorHeader.svelte  EditorPane.svelte  EditorPane.test.ts  HistoryReviewBar.svelte  ProjectOverview.svelte  ProjectOverview.test.ts  SaveVersionBar.svelte  TimelineScrubber.svelte  TimelineScrubber.test.ts  Toolbar.svelte
src/lib/components/rightsidebar/: HistorySection.svelte  HistorySessionItem.svelte  PeerItem.svelte  PeersSection.svelte  PeersSection.test.ts  RightSidebar.svelte  TodosSection.svelte  TodosSection.test.ts  VersionSection.svelte
src/lib/components/settings/: SettingsPane.svelte
src/lib/components/sidebar/: ContextMenu.svelte  FileItem.svelte  ProjectGroup.svelte  QuickOpen.svelte  QuickOpen.test.ts  Sidebar.svelte  Sidebar.test.ts
src/lib/components/sidebar/__test_mocks__/: ContextMenuMock.svelte  ProjectGroupMock.svelte
src/lib/design-system/: DsButton.svelte  DsInput.svelte  DsModal.svelte  DsSection.svelte
src/lib/e2e/: bridge.ts
src/lib/editor/: automerge-prosemirror-adapter.test.ts  automerge-prosemirror-adapter.ts  document-adapter.test.ts  document-adapter.ts  inline-todos.test.ts  inline-todos.ts  paste-normalization.test.ts  paste-normalization.ts  schema.test.ts  schema.ts  setup.test.ts  setup.ts  task-markdown.test.ts  task-markdown.ts
src/lib/navigation/: workspace-router.svelte.ts  workspace-router.test.ts
src/lib/runtime/: tauri.ts
src/lib/session/: editor-session.svelte.ts  editor-session.test.ts
src/lib/state/: app-session.svelte.ts  app-session.test.ts  appearance.svelte.ts  blame.svelte.ts  documents.svelte.ts  documents.test.ts  history.svelte.ts  invite.svelte.ts  ordering.svelte.ts  presence.svelte.ts  presence.test.ts  project-eviction.svelte.ts  project-eviction.test.ts  projects.svelte.ts  settings.svelte.ts  sync.svelte.ts  todos.svelte.ts  todos.test.ts  ui.svelte.ts  updates.svelte.ts  version-review.svelte.ts  versions.svelte.ts  versions.test.ts
src/lib/theme/: bootstrap.ts  dom.ts  schema.ts
src/lib/types/: index.ts
src/lib/utils/: diff.ts  keyboard.ts  platform.ts  time.ts
tests/e2e/: tsconfig.json
tests/e2e/p2p/: 00-smoke.spec.ts  01-share-and-join.spec.ts  02-basic-sync.spec.ts  03-offline-reconnect.spec.ts  04-invite-robustness.spec.ts  05-permissions.spec.ts  06-peer-removal.spec.ts  07-peer-roster.spec.ts  08-images.spec.ts
tests/e2e/p2p/helpers/: app.ts  diagnostics.ts  runtime.ts  selectors.ts  session.ts
