[workspace]
members = [
    "src-tauri",
    "crates/notes-core",
    "crates/notes-sync",
]
resolver = "2"

[workspace.dependencies]
automerge = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
dashmap = "6"
