[package]
name = "notes"
version = "0.2.0"
description = "A local-first, peer-to-peer, end-to-end encrypted markdown notes app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "notes_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notes-core = { path = "../crates/notes-core" }
notes-sync = { path = "../crates/notes-sync" }
notes-crypto = { path = "../crates/notes-crypto" }
automerge.workspace = true
iroh.workspace = true
serde_json.workspace = true
serde.workspace = true
log.workspace = true
uuid.workspace = true
tokio.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
dirs = "6"
anyhow = "1"
getrandom = "0.3"
chrono = "0.4"
hkdf = "0.12"
sha2 = "0.10"
zeroize = "1.8"
iroh-gossip = "0.97"

[dev-dependencies]
tempfile = "3"
