[package]
name = "notes-core"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
uuid.workspace = true
thiserror.workspace = true
dashmap.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
notes-crypto = { path = "../notes-crypto" }
hkdf = "0.12"
sha2 = "0.10"
whoami = "1"
getrandom = "0.3"

[dev-dependencies]
tempfile = "3"
