[package]
name = "notes-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
automerge.workspace = true
iroh.workspace = true
notes-crypto = { path = "../notes-crypto" }
spake2 = "0.4"
zeroize = "1.8"
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
log.workspace = true
uuid.workspace = true
dashmap.workspace = true
iroh-gossip = "0.97"
iroh-blobs.workspace = true
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
getrandom = "0.3"
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
